--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -8,6 +8,9 @@ jobs:
     - name: Upload to CPAN
       id: upload
       uses: thibaultduponchelle/action-upload-to-cpan@master
+      with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
     - name: Get the version that was uploaded
       run: echo "The version was ${{ steps.upload.outputs.version }}"
 
